# aims_dgs4abm

./: README.md  bayesian_model_surrogate_likelihood_figs.ipynb  checkpointing.py  cloud_storage_utils.py  dataloaders.py  diffusion_figs.ipynb  diffusion_train.py  logger.py  mcmlp_sir_figs.ipynb  pyproject.toml  requirements.txt  si_and_sir_grid_figs.ipynb  si_main_result_figs.ipynb  si_variability_and_speedup.ipynb  sir_mcmc_results_figs.ipynb  sir_nlpds.ipynb  train.py
abm/spatial_compartmental/: create_si_dataset.py  create_sir_dataset.py  fuse_all.py  si.py  sir.py  utils.py
configs/: default.yaml
configs/datasets/: HUGE_VANILLA_SIR_vonn_count_grid_10_steps_30.yaml  NO_MOVE_SIR_vonn_count_grid_10_steps_200.yaml  NO_MOVE_SIR_vonn_image_grid_10_steps_20.yaml  SIR_vonn_count_grid_10_steps_200.yaml  SI_diag_grid_10_steps_10.yaml  SI_diag_grid_10_steps_20.yaml  SI_diag_grid_160_steps_10.yaml  SI_diag_grid_160_steps_20.yaml  SI_diag_grid_40_steps_10.yaml  SI_diag_grid_40_steps_20.yaml  VANILLA_SIR_vonn_count_grid_10_steps_200.yaml
configs/infer/spatial_compartmental/: SI_diag_grid_10_steps_10.yaml  SI_diag_grid_10_steps_20.yaml  vae_var_si_g40_s10.yaml  (+4 more)
configs/logger/: default.yaml  ephemeral.yaml
configs/model/: MCMLP.yaml  PriorCVAE.yaml
configs/train/: basic.yaml
inference/spatial_compartmental/: get_sir_predictive_samples.py  si.py  sir.py  viz.py
surrogate/: image_blocks.py  mc_dropout.py  torch_to_flax_helpers.py
surrogate/diffusion/: denoiser.py  diffusion_sampler.py  inner_model.py
surrogate/priorcvae/: __init__.py  decoder.py  encoder.py  vae.py
(+46 files in other folders)
