[project]
name = "aims_dgs4abm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "absl-py>=2.1.0",
    "arviz>=0.20.0",
    "colorama>=0.4.6",
    "flax==0.10.3",
    "google-cloud-storage>=3.1.0",
    "graphviz>=0.20.3",
    "hydra-core>=1.3.2",
    "ipykernel>=6.29.5",
    "matplotlib==3.10.0",
    "numpyro==0.17.0",
    "optax==0.2.4",
    "orbax-checkpoint==0.11.4",
    "orbax-export==0.0.6",
    "pandas>=2.2.3",
    "seaborn==0.13.2",
    "tqdm>=4.67.1",
    "wandb>=0.19.7",
    "jax[cuda12]==0.5.0",
]
